k8s/demo/webhook/webhook-config-validation.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: e2e-test-webhook-config
webhooks:
- clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRFNU1EUXlPREE1TVRBeE1sb1hEVEk1TURReU5UQTVNVEF4TWxvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBSzgrClY5N1NERldQVmFjWEU2RDJ3eVB4a242aklRK0RIWWZoUmx2N0FJUVphc1BoNW85N2ttdmU1UHhWSkdqdlRlVzQKZEFPVWM5VDhFMk1LeEJ2dkhhQUNTU2tRb3I4bEs4OFBpSmViZkl6VlZJWld5ZDl4TmtVN2hjMXo4aCtiWC9aNgpuQ2wzRDBRSkErQ3 [...]
    service:
      name: e2e-test-webhook
      namespace: e2e-tests-webhook-gbgt6
      path: /pods
  failurePolicy: Ignore
  name: deny-unwanted-pod-container-name-and-label.k8s.io
  namespaceSelector: {}
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
